# python-monorepo

./: .gitignore  Dockerfile  pyproject.toml
pdm/: .gitignore  pyproject.toml
pdm/workspaces/app/: pyproject.toml
pdm/workspaces/lib/: pyproject.toml
pdm/workspaces/lib/tests/: test_foo.py
poetry/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
poetry/workspaces/app/: pyproject.toml
poetry/workspaces/app/src/namespace/app/: main.py  test_main.py
poetry/workspaces/cli/: pyproject.toml
poetry/workspaces/cli/src/namespace/cli/: main.py  test_main.py
poetry/workspaces/lib/: pyproject.toml
workspaces/app/: pyproject.toml
workspaces/app/src/namespace/app/: main.py
workspaces/cli/: pyproject.toml
