[project]
name = "namespace-cli"
version = "0.0.0"
description = ""
authors = []
dependencies = [
    "rich>=12.6.0",
]
requires-python = ">=3.7"

[tool.pdm.dev-dependencies]
lib = ["-e ../lib"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.build]
includes = ["src/namespace"]
